tests/snapshots/cli_tests__cli_help.snap
---
source: tests/cli_tests.rs
expression: stdout
---
View your GitHub PRs summary

Usage: gh-log <COMMAND>

Commands:
  view    Open interactive TUI to view PRs
  print   Print PRs to terminal
  config  Show or create configuration file
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
