tests/snapshots/cli_tests__cli_help_short_flag.snap
---
source: tests/cli_tests.rs
expression: stdout
---
View your GitHub PRs summary

Usage: gh-log <COMMAND>

Commands:
  view   Open interactive TUI to view PRs
  print  Print PRs to terminal
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
