tests/snapshots/cli_tests__fish_completion.snap
---
source: tests/cli_tests.rs
expression: stdout
---
# Print an optspec for argparse to handle cmd's options that are independent of any subcommand.
function __fish_gh_log_global_optspecs
	string join \n h/help V/version
end

function __fish_gh_log_needs_command
	# Figure out if the current invocation already has a command.
	set -l cmd (commandline -opc)
	set -e cmd[1]
	argparse -s (__fish_gh_log_global_optspecs) -- $cmd 2>/dev/null
	or return
	if set -q argv[1]
		# Also print the command, so this can be used to figure out what it is.
		echo $argv[1]
		return 1
	end
	return 0
end

function __fish_gh_log_using_subcommand
	set -l cmd (__fish_gh_log_needs_command)
	test -z "$cmd"
	and return 1
	contains -- $cmd[1] $argv
end

complete -c gh-log -n "__fish_gh_log_needs_command" -s h -l help -d 'Print help (see more with \'--help\')'
complete -c gh-log -n "__fish_gh_log_needs_command" -s V -l version -d 'Print version'
complete -c gh-log -n "__fish_gh_log_needs_command" -f -a "view" -d 'Interactive TUI - press \'s\' summary, \'d\' detail (cycles by week/repo), \'t\' tail, \'q\' quit'
complete -c gh-log -n "__fish_gh_log_needs_command" -f -a "print" -d 'Print PRs as text/json/csv - pipe to LLMs, clipboard, or files'
complete -c gh-log -n "__fish_gh_log_needs_command" -f -a "config" -d 'Create/edit config - exclude/ignore repos, customize PR size thresholds'
complete -c gh-log -n "__fish_gh_log_needs_command" -f -a "doctor" -d 'Verify GitHub CLI (gh) is installed and show cache/config paths'
complete -c gh-log -n "__fish_gh_log_needs_command" -f -a "completions" -d 'Generate shell completion scripts for your shell'
complete -c gh-log -n "__fish_gh_log_needs_command" -f -a "help" -d 'Print this message or the help of the given subcommand(s)'
complete -c gh-log -n "__fish_gh_log_using_subcommand view" -l month -d 'Month in format YYYY-MM, e.g. 2025-11 (defaults to current month)' -r
complete -c gh-log -n "__fish_gh_log_using_subcommand view" -l force -d 'Force refresh data from GitHub API, bypassing cache'
complete -c gh-log -n "__fish_gh_log_using_subcommand view" -s h -l help -d 'Print help (see more with \'--help\')'
complete -c gh-log -n "__fish_gh_log_using_subcommand print" -l month -d 'Month in format YYYY-MM, e.g. 2025-11 (defaults to current month)' -r
complete -c gh-log -n "__fish_gh_log_using_subcommand print" -l force -d 'Force refresh data from GitHub API, bypassing cache'
complete -c gh-log -n "__fish_gh_log_using_subcommand print" -l json -d 'Output data in JSON format'
complete -c gh-log -n "__fish_gh_log_using_subcommand print" -l csv -d 'Output data in CSV format'
complete -c gh-log -n "__fish_gh_log_using_subcommand print" -s h -l help -d 'Print help (see more with \'--help\')'
complete -c gh-log -n "__fish_gh_log_using_subcommand config" -s h -l help -d 'Print help (see more with \'--help\')'
complete -c gh-log -n "__fish_gh_log_using_subcommand doctor" -s h -l help -d 'Print help (see more with \'--help\')'
complete -c gh-log -n "__fish_gh_log_using_subcommand completions" -s h -l help -d 'Print help (see more with \'--help\')'
complete -c gh-log -n "__fish_gh_log_using_subcommand help; and not __fish_seen_subcommand_from view print config doctor completions help" -f -a "view" -d 'Interactive TUI - press \'s\' summary, \'d\' detail (cycles by week/repo), \'t\' tail, \'q\' quit'
complete -c gh-log -n "__fish_gh_log_using_subcommand help; and not __fish_seen_subcommand_from view print config doctor completions help" -f -a "print" -d 'Print PRs as text/json/csv - pipe to LLMs, clipboard, or files'
complete -c gh-log -n "__fish_gh_log_using_subcommand help; and not __fish_seen_subcommand_from view print config doctor completions help" -f -a "config" -d 'Create/edit config - exclude/ignore repos, customize PR size thresholds'
complete -c gh-log -n "__fish_gh_log_using_subcommand help; and not __fish_seen_subcommand_from view print config doctor completions help" -f -a "doctor" -d 'Verify GitHub CLI (gh) is installed and show cache/config paths'
complete -c gh-log -n "__fish_gh_log_using_subcommand help; and not __fish_seen_subcommand_from view print config doctor completions help" -f -a "completions" -d 'Generate shell completion scripts for your shell'
complete -c gh-log -n "__fish_gh_log_using_subcommand help; and not __fish_seen_subcommand_from view print config doctor completions help" -f -a "help" -d 'Print this message or the help of the given subcommand(s)'
