tests/snapshots/cli_tests__powershell_completion.snap
---
source: tests/cli_tests.rs
expression: stdout
---

using namespace System.Management.Automation
using namespace System.Management.Automation.Language

Register-ArgumentCompleter -Native -CommandName 'gh-log' -ScriptBlock {
    param($wordToComplete, $commandAst, $cursorPosition)

    $commandElements = $commandAst.CommandElements
    $command = @(
        'gh-log'
        for ($i = 1; $i -lt $commandElements.Count; $i++) {
            $element = $commandElements[$i]
            if ($element -isnot [StringConstantExpressionAst] -or
                $element.StringConstantType -ne [StringConstantType]::BareWord -or
                $element.Value.StartsWith('-') -or
                $element.Value -eq $wordToComplete) {
                break
        }
        $element.Value
    }) -join ';'

    $completions = @(switch ($command) {
        'gh-log' {
            [CompletionResult]::new('-h', '-h', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            [CompletionResult]::new('--help', '--help', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            [CompletionResult]::new('-V', '-V ', [CompletionResultType]::ParameterName, 'Print version')
            [CompletionResult]::new('--version', '--version', [CompletionResultType]::ParameterName, 'Print version')
            [CompletionResult]::new('view', 'view', [CompletionResultType]::ParameterValue, 'Interactive TUI - press ''s'' summary, ''d'' detail (cycles by week/repo), ''t'' tail, ''q'' quit')
            [CompletionResult]::new('print', 'print', [CompletionResultType]::ParameterValue, 'Print PRs as text/json/csv - pipe to LLMs, clipboard, or files')
            [CompletionResult]::new('config', 'config', [CompletionResultType]::ParameterValue, 'Create/edit config - exclude/ignore repos, customize PR size thresholds')
            [CompletionResult]::new('doctor', 'doctor', [CompletionResultType]::ParameterValue, 'Verify GitHub CLI (gh) is installed and show cache/config paths')
            [CompletionResult]::new('completions', 'completions', [CompletionResultType]::ParameterValue, 'Generate shell completion scripts for your shell')
            [CompletionResult]::new('help', 'help', [CompletionResultType]::ParameterValue, 'Print this message or the help of the given subcommand(s)')
            break
        }
        'gh-log;view' {
            [CompletionResult]::new('--month', '--month', [CompletionResultType]::ParameterName, 'Month in format YYYY-MM, e.g. 2025-11 (defaults to current month)')
            [CompletionResult]::new('--force', '--force', [CompletionResultType]::ParameterName, 'Force refresh data from GitHub API, bypassing cache')
            [CompletionResult]::new('-h', '-h', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            [CompletionResult]::new('--help', '--help', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            break
        }
        'gh-log;print' {
            [CompletionResult]::new('--month', '--month', [CompletionResultType]::ParameterName, 'Month in format YYYY-MM, e.g. 2025-11 (defaults to current month)')
            [CompletionResult]::new('--force', '--force', [CompletionResultType]::ParameterName, 'Force refresh data from GitHub API, bypassing cache')
            [CompletionResult]::new('--json', '--json', [CompletionResultType]::ParameterName, 'Output data in JSON format')
            [CompletionResult]::new('--csv', '--csv', [CompletionResultType]::ParameterName, 'Output data in CSV format')
            [CompletionResult]::new('-h', '-h', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            [CompletionResult]::new('--help', '--help', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            break
        }
        'gh-log;config' {
            [CompletionResult]::new('-h', '-h', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            [CompletionResult]::new('--help', '--help', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            break
        }
        'gh-log;doctor' {
            [CompletionResult]::new('-h', '-h', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            [CompletionResult]::new('--help', '--help', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            break
        }
        'gh-log;completions' {
            [CompletionResult]::new('-h', '-h', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            [CompletionResult]::new('--help', '--help', [CompletionResultType]::ParameterName, 'Print help (see more with ''--help'')')
            break
        }
        'gh-log;help' {
            [CompletionResult]::new('view', 'view', [CompletionResultType]::ParameterValue, 'Interactive TUI - press ''s'' summary, ''d'' detail (cycles by week/repo), ''t'' tail, ''q'' quit')
            [CompletionResult]::new('print', 'print', [CompletionResultType]::ParameterValue, 'Print PRs as text/json/csv - pipe to LLMs, clipboard, or files')
            [CompletionResult]::new('config', 'config', [CompletionResultType]::ParameterValue, 'Create/edit config - exclude/ignore repos, customize PR size thresholds')
            [CompletionResult]::new('doctor', 'doctor', [CompletionResultType]::ParameterValue, 'Verify GitHub CLI (gh) is installed and show cache/config paths')
            [CompletionResult]::new('completions', 'completions', [CompletionResultType]::ParameterValue, 'Generate shell completion scripts for your shell')
            [CompletionResult]::new('help', 'help', [CompletionResultType]::ParameterValue, 'Print this message or the help of the given subcommand(s)')
            break
        }
        'gh-log;help;view' {
            break
        }
        'gh-log;help;print' {
            break
        }
        'gh-log;help;config' {
            break
        }
        'gh-log;help;doctor' {
            break
        }
        'gh-log;help;completions' {
            break
        }
        'gh-log;help;help' {
            break
        }
    })

    $completions.Where{ $_.CompletionText -like "$wordToComplete*" } |
        Sort-Object -Property ListItemText
}
