tests/snapshots/cli_tests__print_help.snap
---
source: tests/cli_tests.rs
expression: stdout
---
Print PRs to terminal

Usage: gh-log print --month <YYYY-MM>

Options:
      --month <YYYY-MM>  Month in format YYYY-MM, e.g. 2025-11
  -h, --help             Print help
