tests/snapshots/cli_tests__print_invalid_date_format.snap
---
source: tests/cli_tests.rs
expression: stderr
---
error: invalid value '2025/11' for '--month <YYYY-MM>': Month must be in format YYYY-MM, e.g. 2025-11

For more information, try '--help'.
