tests/snapshots/cli_tests__print_missing_month_argument.snap
---
source: tests/cli_tests.rs
expression: stderr
---
error: the following required arguments were not provided:
  --month <YYYY-MM>

Usage: gh-log print --month <YYYY-MM>

For more information, try '--help'.
