tests/snapshots/cli_tests__view_help.snap
---
source: tests/cli_tests.rs
expression: stdout
---
Navigate PRs with an interactive terminal UI.

Discussion:
    Launch an interactive TUI to browse your PRs. The interface has three
    views that you can toggle between:

    - Summary (s): Weekly and repo statistics
    - Detail (d): Detailed list, cycle between grouped by week or by repo
    - Tail (t): All PRs sorted by lead time (longest first)

    Use arrow keys or j/k to scroll, q or Esc to quit.

    Data is cached after the first fetch. Use --force to bypass cache and
    fetch fresh data from GitHub.

Examples:
    # View current month
    gh-log view

    # View a specific month
    gh-log view --month 2025-12

    # Force fresh data (bypass cache)
    gh-log view --force

Usage: gh-log view [OPTIONS]

Options:
      --month <YYYY-MM>
          Month in format YYYY-MM, e.g. 2025-11 (defaults to current month)

      --force
          Force refresh data from GitHub API, bypassing cache

  -h, --help
          Print help (see a summary with '-h')
